--- a/inst/osrm/install.txt
+++ b/inst/osrm/install.txt
@@ -2,8 +2,6 @@
 # https://github.com/Project-OSRM/osrm-backend/wiki/Building-on-Ubuntu
 # https://github.com/Project-OSRM/osrm-backend
 
-scp -r /home/benoit/osrm_data/* benoitt@149.202.216.223:/home/benoitt/osrm/osrm-data/
-
 # version de ubuntu
 
 ````
@@ -44,13 +42,8 @@ cd /home/benoit/osrm-data
 wget http://download.geofabrik.de/europe/france-latest.osm.pbf
 
 osrm-extract france-latest.osm.pbf -p /usr/local/share/osrm/profiles/car.lua
-osrm-contract france-latest.osm
-
-osrm-routed  /home/benoit/osrm-data/france-latest.osm
-
-wget http://download.geofabrik.de/europe/france/nord-pas-de-calais-latest.osm.pbf
-osrm-extract nord-pas-de-calais-latest.osm.pbf -p /usr/local/share/osrm/profiles/car.lua
-osrm-contract nord-pas-de-calais-latest.osm
+osrm-partition france-latest.osm
+osrm-customize france-latest.osm
 
 osrm-routed  /home/benoit/osrm-data/france-latest.osm
 
